--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,5 +33,10 @@ chrono = { version = "^0.4", default-features = false }
 static_cell = "2"
 
 micromath = "2.0.0"
+
+mpu6050 = "0.1.6"
+
+[profile.dev]
+
 [profile.release]
-debug = 2
+# debug = 2
